--- a/src/components/shared/SideNav/SideNav.scss
+++ b/src/components/shared/SideNav/SideNav.scss
@@ -12,7 +12,3 @@
     @extend th;
   }
 }
-
-th {
-  max-height: 20px;
-}
